<resources>
    <string name="app_name">Travel Easy</string>
    <string name="action_settings">Settings</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="source">Pick up location</string>
    <string name="destination">Drop off location</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="variant">Variant</string>
    <string-array name="variants">
        <item>economy</item>
        <item>mid-size suv</item>
        <item>premium</item>
        <item>mini van</item>
        <item>convertible</item>
    </string-array>
    <string name="submit">Submit</string>
    <string name="connection">Connection</string>
    <string name="aggregator">Aggregator:</string>
    <string name="rate">Total Rate:</string>
    <string name="booking_link">Booking Link:</string>
    <string name="service_provider">Service provider:</string>
    <string name="link_to_provider">Link to service provider:</string>
</resources>
