<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

<RelativeLayout  android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Car Search"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        style="@style/_AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/source"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/destination"
        android:id="@+id/textView4"
        android:layout_marginStart="48dp"
        android:layout_above="@+id/destination"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/start_date"
        android:id="@+id/textView5"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/source"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/source"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginRight="20dp"
        android:layout_toStartOf="@+id/destination" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/destination"
        android:layout_alignBottom="@+id/source"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startDateInput"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:onClick="datePicker"

        android:focusable="false"
        android:layout_toStartOf="@+id/destination"
        android:layout_alignEnd="@+id/source" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/end_date"
        android:id="@+id/textView7"
        android:layout_below="@+id/startTimeInput"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/endDateInput"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/startDateInput" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/end_time"
        android:id="@+id/textView8"
        android:layout_above="@+id/endTimeInput"
        android:layout_alignEnd="@+id/textView4"
        android:layout_toEndOf="@+id/source" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/endTimeInput"
        android:layout_alignTop="@+id/endDateInput"
        android:layout_alignStart="@+id/textView8"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/variant"
        android:id="@+id/textView9"
        android:layout_below="@+id/endTimeInput"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp" />


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/variant"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:spinnerMode="dropdown"
        android:entries="@array/variants"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:id="@+id/submit"
        android:onClick="startActivityTwo"
        android:layout_below="@+id/variant"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Start Time"
        android:id="@+id/textView12"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignStart="@+id/destination" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startTimeInput"
        android:onClick="timePicker"
        android:layout_alignTop="@+id/startDateInput"
        android:layout_toEndOf="@+id/source"
        android:layout_alignEnd="@+id/variant" />

</RelativeLayout>

</ScrollView>