<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Travel summary"
        android:id="@+id/textView2"
        android:layout_weight="0.32"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Bill summary:"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/aggregator"
        android:id="@+id/aggregatorTV"
        android:layout_below="@+id/textView10"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Total Rate:"
        android:id="@+id/totalRateTV"
        android:layout_below="@+id/aggregatorTV"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/booking_link"
        android:id="@+id/bookingLinkTV"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/linkToProviderTV"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/service_provider"
        android:id="@+id/serviceProviderTV"
        android:layout_marginTop="76dp"
        android:layout_below="@+id/totalRateTV"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/aggregatorET"
        android:layout_alignBottom="@+id/aggregatorTV"
        android:layout_toEndOf="@+id/aggregatorTV"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/totalRateET"
        android:text="tr"
        android:layout_alignBaseline="@+id/totalRateTV"
        android:layout_alignBottom="@+id/totalRateTV"
        android:layout_toEndOf="@+id/aggregatorTV" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="bottom"
        android:gravity="bottom|left"
        android:id="@+id/linkToBookET"
        android:layout_alignBaseline="@+id/bookingLinkTV"
        android:layout_toEndOf="@+id/bookingLinkTV"
        android:layout_marginLeft="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/link_to_provider"
        android:id="@+id/linkToProviderTV"
        android:layout_marginTop="58dp"
        android:layout_below="@+id/serviceProviderTV"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/serviceProviderET"
        android:layout_alignBottom="@+id/serviceProviderTV"
        android:layout_toEndOf="@+id/linkToBookET"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/linkToServiceProviderET"
        android:layout_alignBottom="@+id/linkToProviderTV"
        android:layout_toEndOf="@+id/linkToProviderTV"
        android:layout_marginStart="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Total Rate including uber costs:"
        android:id="@+id/UberCostsTV"
        android:layout_below="@+id/totalRateTV"
        android:layout_toStartOf="@+id/linkToServiceProviderET" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/UberCosts"
        android:layout_alignBottom="@+id/UberCostsTV"
        android:layout_alignStart="@+id/linkToServiceProviderET"
        android:layout_alignTop="@+id/UberCostsTV" />


</RelativeLayout>